# open-sigmoid

./: .gitignore  README.md  pyproject.toml
docs/: Makefile  README.md
docs/source/: api.rst  auto_encoding.rst  conf.py  data_brokers.rst  essenzziehen.rst  index.rst  makler.rst  preprocessing.rst  sigmoid_philosophy.rst  tutorials.rst  vorbereiter.rst
docs/source/api/: dtype.rst
examples/: home_rental_prices.py
examples/deprecated/: covertype.py  higgs.py  susy.py  used_car_price.py
examples/regression/: database_broker.yaml  dielectron.py
sigmoid/: __about__.py  __init__.py
sigmoid/analysis/: clustering.py  dimensionality_reduction.py
sigmoid/auto_encoding/: convolutional.py
sigmoid/data_brokers/: sql.py
sigmoid/model_scaling/: pools.py
sigmoid/nn/: base.py  convolutional.py  fully_connected.py  utils.py
sigmoid/preprocessing/: cleaners.py  coordinate_files.py  metadata.py  transformations.py  type_inspectors.py
sigmoid/switching/: models.py
