[tool.poetry]
name = "sigmoid"
version = "0.1.0"
description = "Open source Scalable Infrascture for General Model Optimization on Inhomogenuous Datasets."
authors = ["MindsDB Inc. <community@mindsdb.com>"]
readme = "README.md"
homepage = "https://github.com/mindsdb/open-sigmoid"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
iterative_stratification = "^0.1"
matplotlib = "^3.8"
mysql-connector = "^2.2"
numpy = "1.26"
pandas = "2.1.3"
scikit_learn = "1.3.2"
h5py = "3.10.0"
SQLAlchemy = "^2.0"
torchmetrics = "^1.2"
type_infer = "0.0.15"
pyyaml = "^6.0"
prefect = "^2.12.0"
greenery = "^3.2"
ptype = "^0.2"

[tool.poetry.group.dev.dependencies]
autoapi = "^2"
pytest = ">5"
sphinx = "^4"
sphinx_autodoc_typehints = "^2"
sphinx_autoapi = "^3"
sphinx_rtd_theme = "^2"
nbsphinx = "^0.9"
myst_parser = "^2"
recommonmark = "^0.6.0"
flake8 = "^3.8.2"
pytest-mypy = "^0.6.2"
pytest-cov = "^2.9.0"
pytest-flake8 = "^1.0.6"
pytest-mock = "^3.1.1"
bump2version = "^1.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
